--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     " />
 </head>
 
-<body>
+<body class="container">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-            <div class="container px-4">
+            <div class="container">
                 <a class="navbar-brand fw-bold fs-3" href="#page-top"><span class="text-success">BD</span
             ><span class="text-danger">News</span></a
           >
@@ -43,7 +43,9 @@
             </div>
             </div>
         </nav>
+        <hr class="border border-danger border-2 opacity-50" style="margin-top: 82px" />
     </header>
+
     <!-- JS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="news.js"></script>
