--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>BDNews 24/7</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     " />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="container">
@@ -75,19 +76,48 @@
                             <p class="card-text">
                                 This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                             </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
+                            <div class="d-flex justify-content-between" ">
+                                <div>
+                                    <img src="./image/player-six.jpeg " width="45 " alt="... " class="rounded d-inline-block align-middle " alt="... " />
+
+                                    <span class="fw-bold ">Last</span>
+                                </div>
+                                <div>
+                                    <img src="./image/view.jpg " width="45 " alt="... ">
+                                    <span>last</span>
+                                </div>
+                                <button class="btn btn-primary ">Show Details</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="modal " tabindex="-1 ">
+                <div class="modal-dialog ">
+                  <div class="modal-content ">
+                    <div class="modal-header ">
+                      <h5 class="modal-title ">Modal title</h5>
+                      
+                    </div>
+                    <div class="modal-body ">
+                      <p>Modal body text goes here.</p>
+                    </div>
+                    <div class="modal-footer ">
+                      <button type="button " class="btn btn-secondary " data-bs-dismiss="modal " >Close</button>
+                      <button type="button " class="btn btn-primary ">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
+        <!-- modal -->
+        
     </main>
 
     <!-- JS link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="news.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js "></script>
+    <script src="news.js "></script>
+    <script src="test.js "></script>
 </body>
 
 </html>
