--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BDNews 24/7</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     " />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="container">
@@ -35,10 +35,11 @@
                 <a class="nav-link fs-5" href="#about">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="#services">Blogs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link fs-5" href="#contact">Contact</a>
+                    <a class="nav-link fs-5" id="blog-section" href="#services">Blogs</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-5" href="#contact">Contact</a>
                 </li>
                 </ul>
             </div>
@@ -47,6 +48,54 @@
         <hr class="border border-danger border-2 opacity-50" style="margin-top: 82px" />
     </header>
     <main>
+        <!-- Blog section -->
+        <div class="blog-section d-none">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                1. What is the difference between Var, Let, and Const?
+              </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <span class="fw-bolder">Var:</span>1)var has the function or global scope.2)It gets hoisted to the top of its scope and initialized undefined.3)It can be updated or re-declared.4)It's an old way to declare a variable. <br />
+                            <span class="fw-bolder">Let:</span> 1)let have the block scope. 2)It also got hoisted to the top of its scope but didn't initialize. 3)It can only be updated and can't be re-declared.4)It's a new way to declare variables introduced
+                            in ES6. <br /><span class="fw-bolder">Const:</span> 1)const variable has the block scope. 2)It also got hoisted to the top of its scope but didn't initialize. 3)It can't be updated or re-declared. 4)It's also a new way to declare
+                            a variable, which introduces in ES6
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                2. Regular vs Arrow Function.
+              </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            In regular function, this value is dynamic, In arrow function it equals to this of the outer function. In regular function, arguments will give you list of parameter passed in function, In arrow function arguments is not defined. In regular function,
+                            you always have to return any value, but in Arrow function you can skip return keyword and write in single line. In arrow function parameters should be unique. Hoisting matters in arrow function as function get not be invoked
+                            before initialisations.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                3. Why you are using template string in Javascript?
+              </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            Template strings are a powerful feature of modern JavaScript released in ES6. It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that
+                            are complex and contain dynamic elements. Another great thing that comes with template strings are tags. Tags are functions that take a string and the decomposed parts of the string as parameters and are great for converting
+                            strings to different entities.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- category name section -->
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -54,68 +103,53 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav" id="all-category">
+                    <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
+                        <div class="navbar-nav gap-2" id="all-category">
                             <!-- <a class="nav-link active">Home</a> -->
                         </div>
                     </div>
                 </div>
             </nav>
         </div>
+        <!-- spinner section -->
+
+        <div class="text-center d-none" id="spinner">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+
+        <!-- category size section -->
+        <div class="mt-4" id="founded-size"></div>
         <!-- category details section -->
 
-        <div class="mt-5" id="category-info">
-            <div class="card mb-3">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="..." />
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                            </p>
-                            <div class="d-flex justify-content-between" ">
-                                <div>
-                                    <img src="./image/player-six.jpeg " width="45 " alt="... " class="rounded d-inline-block align-middle " alt="... " />
+        <div class="mt-5" id="category-info"></div>
+        <!-- modal -->
 
-                                    <span class="fw-bold ">Last</span>
-                                </div>
-                                <div>
-                                    <img src="./image/view.jpg " width="45 " alt="... ">
-                                    <span>last</span>
-                                </div>
-                                <button class="btn btn-primary ">Show Details</button>
-                            </div>
-                        </div>
+        <div class="modal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                    </div>
+                    <div class="modal-body">
+                        <p>Modal body text goes here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Close
+              </button>
+                        <button type="button" class="btn btn-primary">
+                Save changes
+              </button>
                     </div>
                 </div>
             </div>
-            <div class="modal " tabindex="-1 ">
-                <div class="modal-dialog ">
-                  <div class="modal-content ">
-                    <div class="modal-header ">
-                      <h5 class="modal-title ">Modal title</h5>
-                      
-                    </div>
-                    <div class="modal-body ">
-                      <p>Modal body text goes here.</p>
-                    </div>
-                    <div class="modal-footer ">
-                      <button type="button " class="btn btn-secondary " data-bs-dismiss="modal " >Close</button>
-                      <button type="button " class="btn btn-primary ">Save changes</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
         </div>
-        <!-- modal -->
-        
     </main>
 
     <!-- JS link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js "></script>
+
     <script src="news.js "></script>
     <script src="test.js "></script>
 </body>
