--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <!-- Blog section -->
         <div class="blog-section d-none">
-            <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion accordion-flush d-none" id="accordion">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -96,6 +96,7 @@
                 </div>
             </div>
         </div>
+
         <!-- category name section -->
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -126,29 +127,26 @@
         <div class="mt-5" id="category-info"></div>
         <!-- modal -->
 
-        <div class="modal" tabindex="-1">
+        <div class="modal fade" id="newsDetailsModal" tabindex="-1" aria-labelledby="newsDetailsModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Modal title</h5>
+                        <h5 class="modal-title" id="newsDetailsModalLabel"></h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                        <p>Modal body text goes here.</p>
-                    </div>
+                    <div id="news-details" class="modal-body"></div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                 Close
-              </button>
-                        <button type="button" class="btn btn-primary">
-                Save changes
               </button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-
     <!-- JS link -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="news.js "></script>
     <script src="test.js "></script>
