blog section added

--- a/index.html
+++ b/index.html
@@ -48,9 +48,22 @@
         <hr class="border border-danger border-2 opacity-50" style="margin-top: 82px" />
     </header>
     <main>
+        <!-- category name section -->
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+                    <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
+                        <div class="navbar-nav gap-2" id="all-category"></div>
+                    </div>
+                </div>
+            </nav>
+        </div>
         <!-- Blog section -->
-        <div class="blog-section d-none">
-            <div class="accordion accordion-flush d-none" id="accordion">
+        <div class="blog-section mt-5">
+            <div class="accordion accordion-flush d-none" id="accordion-section">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -97,21 +110,6 @@
             </div>
         </div>
 
-        <!-- category name section -->
-        <div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-                    <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
-                        <div class="navbar-nav gap-2" id="all-category">
-                            <!-- <a class="nav-link active">Home</a> -->
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </div>
         <!-- spinner section -->
 
         <div class="text-center d-none" id="spinner">
