Responsive data added

--- a/blog.html
+++ b/blog.html
@@ -76,9 +76,9 @@
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            In regular function, this value is dynamic, In arrow function it equals to this of the outer function. In regular function, arguments will give you list of parameter passed in function, In arrow function arguments is not defined. In regular function,
-                            you always have to return any value, but in Arrow function you can skip return keyword and write in single line. In arrow function parameters should be unique. Hoisting matters in arrow function as function get not be invoked
-                            before initialisations.
+                            1) In regular function, this value is dynamic, In arrow function it equals to this of the outer function.<br />2) In regular function, arguments will give you list of parameter passed in function, In arrow function arguments
+                            is not defined.<br />3) In regular function, you always have to return any value, but in Arrow function you can skip return keyword and write in single line.<br />4) In arrow function parameters should be unique. Hoisting matters
+                            in arrow function as function get not be invoked before initializations.
                         </div>
                     </div>
                 </div>
