--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- bootstrap link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     " />
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/d528c964d8.js" crossorigin="anonymous"></script>
+    <!-- css link -->
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -65,6 +68,24 @@
             </nav>
         </div>
 
+        <!-- sorting section -->
+        <section class="mt-3 d-flex justify-content-between">
+            <div>
+                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" disabled />
+                <span class="fw-bold">Sort By View:</span>
+                <label class="btn btn-secondary" for="option3">Default <span><i class="fa-solid fa-angle-down"></i></span
+          ></label>
+            </div>
+            <div>
+                <button type="button" class="btn btn-primary" disabled>
+            Today’s Pick
+          </button>
+                <button type="button" class="btn btn-outline-primary" disabled>
+            Trending
+          </button>
+            </div>
+        </section>
+
         <!-- spinner section -->
         <section id="spinner" class="d-none">
             <div style="height: 400px" class="d-flex justify-content-center align-items-center">
@@ -76,6 +97,7 @@
 
         <!-- category size section -->
         <div class="mt-4" id="founded-size"></div>
+
         <!-- category details section -->
 
         <div class="mt-5" id="category-info"></div>
@@ -103,7 +125,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="news.js "></script>
-    <script src="test.js "></script>
 </body>
 
 </html>
