Responsive style added

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         <!-- sorting section -->
         <section class="mt-3 d-flex justify-content-between">
             <div>
-                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" disabled />
-                <span class="fw-bold">Sort By View:</span>
+                <span class="fw-bold sort-view">Sort By View</span>
+                <input type="radio" class="btn-check mt-sm-4" name="options" id="option3" autocomplete="off" disabled />
                 <label class="btn btn-secondary" for="option3">Default <span><i class="fa-solid fa-angle-down"></i></span
           ></label>
             </div>
-            <div>
-                <button type="button" class="btn btn-primary" disabled>
+            <div class="trending-item">
+                <button type="button" class="btn btn-primary sort-view" disabled>
             Today’s Pick
           </button>
                 <button type="button" class="btn btn-outline-primary" disabled>
